--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <head>
- <h1>Fuente_Tvchoponn/</h1>
+ <h1>Fuente_chopo/</h1>
  </head>
  <body>
 
@@ -12,7 +12,6 @@
 	<li><a href="wizards/">wizards</a><td></td></li>
 
     <li><a href="torrents/">torrents</a><td></td></li>
-	<li><a href="juegos/">juegos</a><td></td></li>
 	<li><a href="acestream-apk/">acestream-apk</a><td></td></li>
 	<li><a href="dependencias-para-tvchopo/">dependencias-para-tvchopo</a><td></td></li>
 
