--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -7,9 +7,9 @@
 
 <li><a href="repository.tvchopo-2.0.0.zip">repository.tvchopo-2.0.0.zip</a><td></td></li>
 
-<li><a href="plugin.video.mitelechopo.zip">plugin.video.mitelechopo.zip</a><td></td></li>
+<li><a href="plugin.video.mitelechopo-14.zip">plugin.video.mitelechopo-14.zip</a><td></td></li>
 
-<li><a href="plugin.video.atresplayerchopo-1.zip">plugin.video.atresplayerchopo-1.zip</a><td></td></li>
+<li><a href="plugin.video.atresplayerchopo-12.zip">plugin.video.atresplayerchopo-12.zip</a><td></td></li>
 
 
 </ul>
