--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -11,6 +11,8 @@
 
 <li><a href="plugin.video.emuchopo-11.zip">plugin.video.emuchopo-11.zip</a><td></td></li>
 
+<li><a href="plugin.video.choposex-16.zip">plugin.video.choposex-16.zip</a><td></td></li>
+
 
 
 <li><a href="plugin.video.atresplayerchopo-12.zip">plugin.video.atresplayerchopo-12.zip</a><td></td></li>
