--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -7,6 +7,8 @@
 
 <li><a href="repository.tvchopo-3.zip">repository.tvchopo-3.zip</a><td></td></li>
 
+<li><a href="plugin.video.chopoplus-1.zip">plugin.video.chopoplus-1.zip</a><td></td></li>
+
 <li><a href="plugin.video.mitelechopo-14.zip">plugin.video.mitelechopo-14.zip</a><td></td></li>
 
 <li><a href="plugin.video.emuchopo-11.zip">plugin.video.emuchopo-11.zip</a><td></td></li>
