--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -5,8 +5,11 @@
  <body>		
 <li><a href="https://fuente-chopo.github.io">MENU PRINCIPAL</a><td></td></li>
 
-<li><a href="repository.tvchopo-3.zip">repository.tvchopo-3.zip</a><td></td></li>
+<li><a href="plugin.video.atresplayerchopo-14.zip">plugin.video.atresplayerchopo-14.zip</a><td></td></li>
 
+<li><a href="plugin.video.chopoplus-1.zip">plugin.video.chopoplus-1.zip</a><td></td></li>
+
+<li><a href="repository.tvchopo-3.zip">repository.tvchopo-3.zip</a><td></td></li>
 
 <li><a href="plugin.video.mitelechopo-14.zip">plugin.video.mitelechopo-14.zip</a><td></td></li>
 
