--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -1,16 +1,20 @@
 <html>
  <head>
- <h1>Fuente Tvchopo/tvchopo..</h1>
+ <h1>Fuente Tvchopo/tvchopo</h1>
  </head>
  <body>		
-<li><a href="https://fuente-chopo.github.io">MENU PRINCIPAL</a><td></td></li>
+<li><a href="https://florepicon.github.io/flor/">MENU PRINCIPAL</a><td></td></li>
 
 
-
+<li><a href="plugin.video.choposex-16.zip">plugin.video.choposex-16.zip</a><td></td></li>
 
 <li><a href="repository.tvchopo-3.zip">repository.tvchopo-3.zip</a><td></td></li>
 
 <li><a href="plugin.video.mitelechopo-14.zip">plugin.video.mitelechopo-14.zip</a><td></td></li>
+
+<li><a href="plugin.video.chopoplus-1.zip">plugin.video.chopoplus-1.zip</a><td></td></li>
+
+<li><a href="plugin.video.atresplayerchopo-16.zip">plugin.video.atresplayerchopo-16.zip</a><td></td></li>
 
 <li><a href="plugin.video.emuchopo-11.zip">plugin.video.emuchopo-11.zip</a><td></td></li>
 
