--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -3,10 +3,12 @@
  <h1>Fuente Tvchopo/tvchopo</h1>
  </head>
  <body>		
-<li><a href="https://florepicon.github.io/flor/">MENU PRINCIPAL</a><td></td></li>
+<li><a href="https://fuente-chopo.github.io/">MENU PRINCIPAL</a><td></td></li>
 
 
 <li><a href="plugin.video.choposex-16.zip">plugin.video.choposex-16.zip</a><td></td></li>
+
+<li><a href="plugin.video.rtvechopo-1.zip">plugin.video.rtvechopo-1.zip</a><td></td></li>
 
 <li><a href="repository.tvchopo-3.zip">repository.tvchopo-3.zip</a><td></td></li>
 
