--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -6,7 +6,7 @@
 <li><a href="https://fuente-chopo.github.io/">MENU PRINCIPAL</a><td></td></li>
 
 
-<li><a href="plugin.video.choposex-16.zip">plugin.video.choposex-16.zip</a><td></td></li>
+<li><a href="plugin.video.canalsurmaschopo-1.zip">plugin.video.canalsurmaschopo-1.zip</a><td></td></li>
 
 <li><a href="plugin.video.rtvechopo-2.zip">plugin.video.rtvechopo-2.zip</a><td></td></li>
 
@@ -14,9 +14,7 @@
 
 <li><a href="plugin.video.mitelechopo-14.zip">plugin.video.mitelechopo-14.zip</a><td></td></li>
 
-<li><a href="plugin.video.chopoplus-1.zip">plugin.video.chopoplus-1.zip</a><td></td></li>
 
-<li><a href="plugin.video.atresplayerchopo-16.zip">plugin.video.atresplayerchopo-16.zip</a><td></td></li>
 
 <li><a href="plugin.video.emuchopo-11.zip">plugin.video.emuchopo-11.zip</a><td></td></li>
 
