--- a/tvchopo/index.html
+++ b/tvchopo/index.html
@@ -12,6 +12,11 @@
 
 <li><a href="repository.tvchopo-3.zip">repository.tvchopo-3.zip</a><td></td></li>
 
+
+<li><a href="plugin.video.chopoplus-1.zip">plugin.video.chopoplus-1.zip</a><td></td></li>
+
+<li><a href="plugin.video.atresplayerchopo-16.zip">plugin.video.atresplayerchopo-16.zip</a><td></td></li>
+
 <li><a href="plugin.video.mitelechopo-14.zip">plugin.video.mitelechopo-14.zip</a><td></td></li>
 
 <li><a href="plugin.video.telemadridchopo-2.zip">plugin.video.telemadridchopo-2.zip</a><td></td></li>
@@ -19,7 +24,7 @@
 
 <li><a href="plugin.video.emuchopo-11.zip">plugin.video.emuchopo-11.zip</a><td></td></li>
 
-
+<li><a href="plugin.video.choposex-16.zip">plugin.video.choposex-16.zip</a><td></td></li>
 
 
 </ul>
